# reat

./: .gitignore  Cargo.toml  README.md  reat.1
src/: actions.rs  core.rs  main.rs
